--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-flipper": "^0.212.0",
     "react-native-paper": "^5.10.6",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
